--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
     margin: 0;
     padding: 0;
 }
+/* estilo para id */
+#titulo{
+    font-family: sans-serif;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+}
+
+
 
 fieldset{
 
@@ -14,28 +22,72 @@ body{
     background-color: azure;
     font-family: sans-serif;
     font-size: 1em;
-    color: blue;
+    color: rgb(0, 0, 0);
     margin-left: 36%;
-    margin-top: 2;
+    margin-top: 2%;
     justify-content: center;
 }
 input, select, button{
     background-color: azure;
     font-family: sans-serif;
     font-size: 1em;
-    color: blue;
-    border-radius: 5px;}
+    color: rgb(0, 0, 0);
+    border-radius: 35px;}
 
 
 .campo {
-    margin-bottom: 1em;
+    margin-bottom: 7px;
 }
 
 .campo label{
     margin-bottom: 1em;
-    color: blue;
+    color: rgb(0, 0, 0);
     display: block;
 }
+
+.grupo::before, .grupo::after{
+    display: table;
+}
+
+.grupo::after{
+    clear: both;
+}
+
+fieldset.grupo .campo{
+    float: left;
+    margin-right: 1em;
+}
+
+.campo input:focus, .campo select:focus{
+    background: rgb(219,216,216);
+}
+.botão{
+    font-size: 1.2em;
+    background: black;
+    margin-bottom: 1em;
+    color: white;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgb(0, 0, 2);
+    text-shadow: 2px 2px 2px rgb(0, 0, 2);
+    cursor: pointer;
+}
+
+.botão:hover{
+    background: greenyellow;
+}
+
+.campo input[type="text"], .campo input[type="password"], .campo input[type="email"], .campo select{
+    padding: 0.5em;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px rgb(70, 68, 68);
+    display: block;
+}
+
+
+/* .campo select option{
+    padding-right: 0%;
+} */
+
 
 /* todos os H1 receberão esses estilos */
 /* h1{
